--- a/src/buddyboss.pot
+++ b/src/buddyboss.pot
@@ -1904,7 +1904,7 @@ msgstr ""
 #: bp-core/admin/bp-core-admin-functions.php:2228
 #: bp-core/admin/bp-core-admin-functions.php:2385
 #: bp-core/bp-core-functions.php:2864
-msgid "Email Templates"
+msgid "Email Notifications"
 msgstr ""
 
 #: bp-core/admin/bp-core-admin-functions.php:2309
