--- a/src/buddyboss.pot
+++ b/src/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.0.0\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-03-23 13:02:48+00:00\n"
+"POT-Creation-Date: 2019-03-24 08:21:24+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3456,7 +3456,9 @@ msgid "Not recently active"
 msgstr ""
 
 #: bp-core/bp-core-functions.php:2452
-msgid "Everything in a community website revolves around its members."
+msgid ""
+"Everything in a community website revolves around its members. All website "
+"users are given member profiles."
 msgstr ""
 
 #: bp-core/bp-core-functions.php:2455 bp-xprofile/bp-xprofile-admin.php:156
@@ -3509,7 +3511,7 @@ msgstr ""
 #: bp-core/bp-core-functions.php:2482
 msgid ""
 "Allow members to organize themselves into public, private or hidden social "
-"areas with separate activity feeds and member listing."
+"groups with separate activity feeds and member listings."
 msgstr ""
 
 #: bp-core/bp-core-functions.php:2486
@@ -3550,7 +3552,7 @@ msgstr ""
 
 #: bp-core/bp-core-functions.php:2511
 msgid ""
-"Allow members to send private message. Messages can be sent to one member "
+"Allow members to send private messages. Messages can be sent to one member "
 "or a group of members."
 msgstr ""
 
@@ -12031,21 +12033,21 @@ msgstr ""
 msgid "Enroll user in LearnDash course(s) after purchasing In-App purchases."
 msgstr ""
 
-#: bp-integrations/appboss/bp-appboss-functions.php:21
-#: bp-integrations/memberpress/bp-memberpress-functions.php:21
-#: bp-integrations/woocommerce/bp-woocommerce-functions.php:21
+#: bp-integrations/appboss/bp-appboss-functions.php:23
+#: bp-integrations/memberpress/bp-memberpress-functions.php:23
+#: bp-integrations/woocommerce/bp-woocommerce-functions.php:23
 msgid "View Logs"
 msgstr ""
 
-#: bp-integrations/appboss/bp-appboss-functions.php:32
-#: bp-integrations/memberpress/bp-memberpress-functions.php:32
-#: bp-integrations/woocommerce/bp-woocommerce-functions.php:33
+#: bp-integrations/appboss/bp-appboss-functions.php:34
+#: bp-integrations/memberpress/bp-memberpress-functions.php:34
+#: bp-integrations/woocommerce/bp-woocommerce-functions.php:34
 msgid ""
-"<h3>LearnDash is Required.</h3>BuddyBoss Platform has integration settings "
-"for LearnDash-%s. If using LearnDash we add the ability to sync LearnDash "
-"groups with social groups, to generate course reports within social groups, "
-"and more. If using our BuddyBoss Theme we also include styling for "
-"LearnDash."
+"<h3>LearnDash is Required.</h3> <p>BuddyBoss Platform has integration "
+"settings for LearnDash-%s. If using LearnDash we add the ability to sync "
+"LearnDash groups with social groups, to generate course reports within "
+"social groups, and more. If using our BuddyBoss Theme we also include "
+"styling for LearnDash.</p>"
 msgstr ""
 
 #: bp-integrations/appboss/templates/admin/integration-tab-intro.php:4
@@ -12062,8 +12064,8 @@ msgid ""
 "LearnDash they will also sync course data with your website. "
 msgstr ""
 
-#: bp-integrations/appboss/templates/admin/integration-tab-intro.php:15
-msgid "<strong><a href=\"%s\">Learn more &rarr;</a></strong>"
+#: bp-integrations/appboss/templates/admin/integration-tab-intro.php:20
+msgid "Learn more"
 msgstr ""
 
 #: bp-integrations/learndash/bp-admin-learndash-tab.php:96
@@ -16779,7 +16781,7 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/includes/template-tags.php:2511
 msgid ""
-"By creating an account, you agree to our <a class=\"popup-modal "
+"By creating an account you are agreeing to the <a class=\"popup-modal "
 "popup-terms\" href=\"#terms-modal\">Terms of Service</a>."
 msgstr ""
 
@@ -16799,15 +16801,16 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/includes/template-tags.php:2527
 msgid ""
-"By creating an account, you agree to our <a class=\"popup-modal-register "
-"popup-privacy\" href=\"#privacy-modal\">Privacy Policy</a>."
+"By creating an account you are agreeing to the <a "
+"class=\"popup-modal-register popup-privacy\" "
+"href=\"#privacy-modal\">Privacy Policy</a>."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/template-tags.php:2543
 msgid ""
-"By creating an account, you agree to our <a class=\"popup-modal-register "
-"popup-terms\" href=\"#terms-modal\">Terms of Service</a> and <a "
-"class=\"popup-modal-register popup-privacy\" "
+"By creating an account you are agreeing to the <a "
+"class=\"popup-modal-register popup-terms\" href=\"#terms-modal\">Terms of "
+"Service</a> and <a class=\"popup-modal-register popup-privacy\" "
 "href=\"#privacy-modal\">Privacy Policy</a>."
 msgstr ""
 
