--- a/src/buddyboss.pot
+++ b/src/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.0.0\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-04-06 18:35:05+00:00\n"
+"POT-Creation-Date: 2019-04-06 19:24:37+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1537,9 +1537,9 @@ msgstr ""
 
 #: bp-core/admin/bp-core-admin-components.php:158
 msgid ""
-"Components extend and expand the functionality of BuddyBoss Platform. You "
-"can activate any component individually or click \"Select all\" above to "
-"bulk activate all components."
+"Components extend the functionality of BuddyBoss Platform. You can activate "
+"any component individually or click \"Select all\" above to bulk activate "
+"all components."
 msgstr ""
 
 #: bp-core/admin/bp-core-admin-components.php:189
