--- a/src/languages/buddyboss-en_US.po
+++ b/src/languages/buddyboss-en_US.po
@@ -16872,7 +16872,7 @@ msgid "Single Fields"
 msgstr ""
 
 #: bp-xprofile/classes/class-bp-xprofile-field-type-datebox.php:28
-msgid "Date Selector"
+msgid "Date"
 msgstr ""
 
 #: bp-xprofile/classes/class-bp-xprofile-field-type-datebox.php:112
@@ -17013,7 +17013,7 @@ msgid "Add Another Option"
 msgstr ""
 
 #: bp-xprofile/classes/class-bp-xprofile-field-type-multiselectbox.php:28
-msgid "Multi Select Box"
+msgid "Multi Select"
 msgstr ""
 
 #: bp-xprofile/classes/class-bp-xprofile-field-type-number.php:28
@@ -17030,7 +17030,7 @@ msgid "Radio Buttons"
 msgstr ""
 
 #: bp-xprofile/classes/class-bp-xprofile-field-type-selectbox.php:28
-msgid "Drop Down Select Box"
+msgid "Drop Down"
 msgstr ""
 
 #: bp-xprofile/classes/class-bp-xprofile-field-type-social-networks.php:28
@@ -17046,7 +17046,7 @@ msgstr ""
 #. translators: accessibility text
 #: bp-xprofile/classes/class-bp-xprofile-field-type-telephone.php:28
 #: bp-xprofile/classes/class-bp-xprofile-field-type-telephone.php:123
-msgid "Phone Number"
+msgid "Phone"
 msgstr ""
 
 #: bp-xprofile/classes/class-bp-xprofile-field-type-telephone.php:157
@@ -17058,13 +17058,13 @@ msgid "International"
 msgstr ""
 
 #: bp-xprofile/classes/class-bp-xprofile-field-type-textarea.php:28
-msgid "Multi-line Text Area"
+msgid "Paragraph Text"
 msgstr ""
 
 #. translators: accessibility text
 #: bp-xprofile/classes/class-bp-xprofile-field-type-textbox.php:28
 #: bp-xprofile/classes/class-bp-xprofile-field-type-textbox.php:106
-msgid "Textbox"
+msgid "Single Line Text"
 msgstr ""
 
 #. translators: accessibility text
