--- a/src/bp-help/docs/03-buddyboss-theme/06-theme-options/10-404-page.md
+++ b/src/bp-help/docs/03-buddyboss-theme/06-theme-options/10-404-page.md
@@ -1,4 +1,6 @@
 #404 Page
 
+[bp-embed] https://youtu.be/hY6EhFL3k-I [/bp-embed]
+
 [**DROPBOX VIDEO**](https://www.dropbox.com/s/r3pv23ge43jc7tc/buddyboss-theme-options-404-page.mp4?raw=1)
 (To be embedded once we upload it to Youtube...)
