--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.1.5\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-08-09 16:11:33+00:00\n"
+"POT-Creation-Date: 2019-08-09 16:27:40+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12317,7 +12317,10 @@ msgid "BuddyPress <span>&mdash; Third party plugin settings</span>"
 msgstr ""
 
 #: bp-integrations/compatibility/templates/admin/integration-tab-intro.php:34
-msgid "Here we have setting for the third party plugins"
+msgid ""
+"In BuddyPress, developers frequently added their plugin options into "
+"Settings > BuddyPress > Options. If you enable any third party BuddyPress "
+"plugins that used this method, those options will appear on this page."
 msgstr ""
 
 #: bp-integrations/learndash/bp-admin-learndash-tab.php:96
