--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.1.9\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-09-21 23:32:19+00:00\n"
+"POT-Creation-Date: 2019-09-21 23:35:50+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -5466,7 +5466,7 @@ msgid "More"
 msgstr ""
 
 #: bp-core/classes/class-bp-core-follow-follower-widget.php:108
-msgid "Users who are Following me"
+msgid "Users Following Me"
 msgstr ""
 
 #: bp-core/classes/class-bp-core-follow-follower-widget.php:113
@@ -5497,7 +5497,7 @@ msgstr ""
 #: bp-core/classes/class-bp-core-follow-follower-widget.php:117
 msgid ""
 "Note: This widget is only displayed if a member is logged in and if the "
-"logged-in user is followed by some users."
+"logged-in user is followed by other users."
 msgstr ""
 
 #: bp-core/classes/class-bp-core-follow-following-widget.php:25
