--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.1.9\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-10-25 15:50:01+00:00\n"
+"POT-Creation-Date: 2019-10-27 03:20:19+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1404,8 +1404,6 @@ msgstr ""
 #: bp-templates/bp-nouveau/buddypress/common/js-templates/messages/search-form.php:15
 #: bp-templates/bp-nouveau/buddypress/common/search/profile-search.php:299
 #: bp-templates/bp-nouveau/buddypress/common/search/search-form.php:20
-#: bp-templates/bp-nouveau/buddypress/groups/single/messages.php:11
-#: bp-templates/bp-nouveau/buddypress/groups/single/messages.php:14
 #: bp-templates/bp-nouveau/buddypress/search/search-form.php:26
 msgid "Search"
 msgstr ""
@@ -12188,7 +12186,7 @@ msgstr ""
 
 #: bp-groups/classes/class-bp-groups-component.php:752
 #: bp-templates/bp-nouveau/includes/groups/classes.php:315
-msgid "Group Message"
+msgid "Send Messages"
 msgstr ""
 
 #: bp-groups/classes/class-bp-groups-component.php:767
@@ -13419,8 +13417,8 @@ msgstr ""
 
 #: bp-media/bp-media-settings.php:399
 msgid ""
-"Allow members to upload photos in <strong>private</strong> and "
-"<strong>group messages</strong>"
+"Allow members to upload photos in <strong>private and group "
+"messages</strong>"
 msgstr ""
 
 #: bp-media/bp-media-settings.php:401
@@ -13440,9 +13438,7 @@ msgid "Allow members to use emoji in <strong>group activity posts</strong>"
 msgstr ""
 
 #: bp-media/bp-media-settings.php:522
-msgid ""
-"Allow members to use emoji in <strong>private</strong> and <strong>group "
-"messages</strong>"
+msgid "Allow members to use emoji in <strong>private and group messages</strong>"
 msgstr ""
 
 #: bp-media/bp-media-settings.php:524
@@ -13473,8 +13469,8 @@ msgstr ""
 
 #: bp-media/bp-media-settings.php:710
 msgid ""
-"Allow members to use animated GIFs in <strong>private</strong> and "
-"<strong>group messages</strong>"
+"Allow members to use animated GIFs in <strong>private and group "
+"messages</strong>"
 msgstr ""
 
 #: bp-media/bp-media-settings.php:712
@@ -15132,6 +15128,8 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/buddypress/common/js-templates/invites/parts/bp-invites-filters.php:5
 #: bp-templates/bp-nouveau/buddypress/groups/single/messages.php:10
+#: bp-templates/bp-nouveau/buddypress/groups/single/messages.php:11
+#: bp-templates/bp-nouveau/buddypress/groups/single/messages.php:14
 msgid "Search Members"
 msgstr ""
 
