--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.2.0\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-11-09 02:05:06+00:00\n"
+"POT-Creation-Date: 2019-11-10 23:03:56+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1651,10 +1651,9 @@ msgstr ""
 
 #: bp-core/admin/bp-core-admin-functions.php:471
 msgid ""
-"You are using a theme that relies on the older %1$s templates, and some "
-"things may not work properly. Consider switching to our <em>new</em> "
-"BuddyBoss Theme, a generic WordPress theme, or any newer theme that is "
-"compatible with the %2$s template pack."
+"You are using an old theme and/or BuddyPress addon that relies on the older "
+"%1$s templates, and some things may not work properly. Consider switching "
+"to our %2$s and/or removing the BuddyPress addon that is using old methods."
 msgstr ""
 
 #: bp-core/admin/bp-core-admin-functions.php:646
@@ -17191,7 +17190,7 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/includes/template-tags.php:2539
 msgid ""
-"terms-modalBy creating an account you are agreeing to the <a "
+"By creating an account you are agreeing to the <a "
 "class=\"popup-modal-register popup-terms\" href=\"#terms-modal\">%s</a>."
 msgstr ""
 
