--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.2.0\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-11-15 23:41:57+00:00\n"
+"POT-Creation-Date: 2019-11-15 23:50:35+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7844,7 +7844,7 @@ msgid "Single Forum Slugs"
 msgstr ""
 
 #: bp-forums/admin/settings.php:60
-msgid "Forum User Slugs"
+msgid "Forum Profile Slugs"
 msgstr ""
 
 #: bp-forums/admin/settings.php:65 bp-forums/admin/tools.php:475
@@ -8347,7 +8347,7 @@ msgid "Possible %1$s conflict: %2$s"
 msgstr ""
 
 #: bp-forums/admin/settings.php:1814
-msgid "Customize your user profile slugs."
+msgid "Custom slugs for member profiles."
 msgstr ""
 
 #: bp-forums/admin/tools.php:42
