--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.2.1\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-11-27 17:01:30+00:00\n"
+"POT-Creation-Date: 2019-11-27 17:20:03+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -5354,7 +5354,7 @@ msgid "About"
 msgstr ""
 
 #: bp-core/classes/class-bp-admin.php:739
-msgid "You need to go online for the documentation to download."
+msgid "<strong>You are offline.</strong> Documentation requires internet access."
 msgstr ""
 
 #: bp-core/classes/class-bp-attachment-avatar.php:40
