--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.2.2\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-12-24 23:55:58+00:00\n"
+"POT-Creation-Date: 2019-12-25 00:06:28+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16808,7 +16808,7 @@ msgid "You can view the group's pending invitations from this screen."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/groups/ajax.php:403
-msgid "All Site Member already received Group Invitation."
+msgid "No members found."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/groups/ajax.php:409
