--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.2.4\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-01-27 06:15:13+00:00\n"
+"POT-Creation-Date: 2020-01-29 01:41:54+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -5618,8 +5618,8 @@ msgstr ""
 
 #: bp-core/classes/class-bp-core-follow-follower-widget.php:163
 msgid ""
-"Note: This widget is only displayed if a member is logged in and if the "
-"logged-in user is followed by other users."
+"Note: This widget is only displayed if a member is followed by other "
+"members."
 msgstr ""
 
 #: bp-core/classes/class-bp-core-follow-following-widget.php:25
@@ -5635,13 +5635,11 @@ msgid "I'm Following"
 msgstr ""
 
 #: bp-core/classes/class-bp-core-follow-following-widget.php:88
-msgid "%s Following"
+msgid "%s is Following"
 msgstr ""
 
 #: bp-core/classes/class-bp-core-follow-following-widget.php:164
-msgid ""
-"Note: This widget is only displayed if a member is logged in and if the "
-"logged-in user is following some users."
+msgid "Note: This widget is only displayed if a member is following other members."
 msgstr ""
 
 #: bp-core/classes/class-bp-core-login-widget.php:27
@@ -6016,13 +6014,13 @@ msgstr ""
 
 #: bp-core/deprecated/buddypress/1.5.php:376
 msgid ""
-"%1$s mentioned you in the group \"%2$s\":\r\n"
-"\r\n"
-"\"%3$s\"\r\n"
-"\r\n"
-"To view and respond to the message, log in and visit: %4$s\r\n"
-"\r\n"
-"---------------------\r\n"
+"%1$s mentioned you in the group \"%2$s\":\n"
+"\n"
+"\"%3$s\"\n"
+"\n"
+"To view and respond to the message, log in and visit: %4$s\n"
+"\n"
+"---------------------\n"
 msgstr ""
 
 #: bp-core/deprecated/buddypress/1.6.php:154
@@ -11283,7 +11281,7 @@ msgid ""
 msgstr ""
 
 #: bp-friends/classes/class-bp-core-friends-widget.php:30
-msgid "(BB) Connections"
+msgid "(BB) My Connections"
 msgstr ""
 
 #: bp-friends/classes/class-bp-core-friends-widget.php:156
@@ -11320,6 +11318,10 @@ msgstr ""
 
 #: bp-friends/classes/class-bp-core-friends-widget.php:253
 msgid "Default connections to show:"
+msgstr ""
+
+#: bp-friends/classes/class-bp-core-friends-widget.php:260
+msgid "Note: This widget is only displayed if a member has some connections."
 msgstr ""
 
 #: bp-friends/classes/class-bp-friends-component.php:137
