--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.2.7\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-03-02 05:01:00+00:00\n"
+"POT-Creation-Date: 2020-03-03 04:46:59+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12267,12 +12267,12 @@ msgid_plural "%s groups"
 msgstr[0] ""
 msgstr[1] ""
 
-#: bp-groups/bp-groups-template.php:7386
-msgid "an"
+#: bp-groups/bp-groups-template.php:7382 bp-groups/bp-groups-template.php:7386
+msgid "a"
 msgstr ""
 
 #: bp-groups/bp-groups-template.php:7386
-msgid "a"
+msgid "an"
 msgstr ""
 
 #: bp-groups/bp-groups-widgets.php:77
