--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.2.9.1\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-04-08 04:18:36+00:00\n"
+"POT-Creation-Date: 2020-04-08 10:10:50+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -907,7 +907,7 @@ msgstr ""
 #: bp-templates/bp-nouveau/buddypress/document/actions.php:13
 #: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:47
 #: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:102
-#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:116
+#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:117
 #: bp-templates/bp-nouveau/buddypress/media/actions.php:13
 #: bp-templates/bp-nouveau/includes/activity/template-tags.php:533
 #: bp-templates/bp-nouveau/includes/activity/template-tags.php:534
@@ -6302,13 +6302,13 @@ msgstr ""
 
 #: bp-core/deprecated/buddypress/1.5.php:376
 msgid ""
-"%1$s mentioned you in the group \"%2$s\":\n"
-"\n"
-"\"%3$s\"\n"
-"\n"
-"To view and respond to the message, log in and visit: %4$s\n"
-"\n"
-"---------------------\n"
+"%1$s mentioned you in the group \"%2$s\":\r\n"
+"\r\n"
+"\"%3$s\"\r\n"
+"\r\n"
+"To view and respond to the message, log in and visit: %4$s\r\n"
+"\r\n"
+"---------------------\r\n"
 msgstr ""
 
 #: bp-core/deprecated/buddypress/1.6.php:154
@@ -10396,7 +10396,7 @@ msgstr ""
 #: bp-templates/bp-nouveau/buddypress/document/activity-document-move.php:51
 #: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:46
 #: bp-templates/bp-nouveau/buddypress/document/activity-entry.php:101
-#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:108
+#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:109
 msgid "Move"
 msgstr ""
 
@@ -10834,7 +10834,7 @@ msgid "Manage Tag: \"%s\""
 msgstr ""
 
 #: bp-forums/templates/default/bbpress/form-topic-tag.php:21
-#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:107
+#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:108
 msgid "Rename"
 msgstr ""
 
@@ -16128,7 +16128,11 @@ msgstr ""
 msgid "Previous"
 msgstr ""
 
-#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:112
+#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:103
+msgid "Copy Download Link"
+msgstr ""
+
+#: bp-templates/bp-nouveau/buddypress/document/document-entry.php:113
 msgid "Edit Privacy"
 msgstr ""
 
